# Booktracker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
authors/: models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_book.py  0002_remove_author_book_author_book.py  0003_alter_author_book.py  0004_remove_author_book.py
authors/tests/: test_authors.py  test_authors_response.py  test_urls.py
booklist/: models.py  serializers.py  urls.py  views.py
booklist/migrations/: 0001_initial.py
booklists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
booklists/migrations/: 0001_initial.py  0002_booklist_user_alter_booklist_book.py  0003_rename_user_booklist_owner.py
booklists/tests/: test_booklist.py  test_booklists.py
books/: documents.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_author.py  0003_book_search_vector_and_more.py  0004_alter_book_search_vector.py  0005_remove_book_books_book_search__c24b82_gin_and_more.py
books/tests/: test_books.py
booktracker/: __init__.py  celery.py  permissions.py  settings.py  urls.py
readlist/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
readlist/migrations/: 0001_initial.py
users/: models.py  serializer.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_booklist.py  0002_alter_customuser_list.py  0003_alter_customuser_booklist.py  0004_alter_customuser_booklist.py  0005_remove_customuser_booklist.py  0006_customuser_booklist.py  0007_alter_customuser_booklist.py  0008_remove_customuser_booklist_customuser_booklist.py  0009_remove_customuser_booklist.py
users/tests/: test_users.py
