[project]
authors = [
    {name = "Hexlet team", email = "team@hexlet.io"},
]
requires-python = "<4.0,>=3.10"
name = "python-example-app"
version = "0.1.0"
description = "Example application"
readme = "README.md"
dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=2.3.0",
    "djoser>=2.2.3",
    "python-dotenv>=1.0.1",
    "django-extensions>=3.2.3",
    "pytest>=8.3.3",
    "pytest-django<=4.9.0",
    "django-filter>=24.3",
    "elasticsearch-dsl>=8.16.0",
    "django-elasticsearch-dsl>=8.0",
    "celery>=5.4.0",
    "redis>=5.2.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["booktracker_project"]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
